app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  -webkit-tap-highlight-color: transparent;
  margin: 0;
}

html,
body {
  background-color: #000000;
  min-height: 100%;
  font-feature-settings: "tnum";
}

body {
  min-height: 100dvh;
}

.app-root {
  min-height: 100dvh;
  background-color: #f2f2f7;
  padding-top: env(safe-area-inset-top);
  padding-left: env(safe-area-inset-left);
  padding-right: env(safe-area-inset-right);
  padding-bottom: calc(4rem + env(safe-area-inset-bottom));
}

.login-root {
  min-height: 100dvh;
  background-color: #000000;
  padding-top: env(safe-area-inset-top);
  padding-bottom: env(safe-area-inset-bottom);
}

.pt-safe {
  padding-top: max(4rem, calc(1rem + env(safe-area-inset-top)));
}

.nav-safe {
  padding-bottom: env(safe-area-inset-bottom);
}

